1.删除mybatis相关配置 2.修改logg包名  为com.xs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,7 @@ logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.org.springframework.security=INFO
 logging.level.org.springframework.web=INFO
-logging.level.org.mybatis=INFO
-logging.level.com.wind=DEBUG
-logging.level.tk.mybatis=INFO
+logging.level.com.xs=DEBUG
 logging.file=spring.log
 
 # druid
