1.增加oauth2 配置 2.增加jpa查询 3.增加jpa配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,17 @@ druid.max-active=20
 druid.test-on-borrow=true
 druid.allow=127.0.0.1
 druid.filters=stat,wall,log4j
+
+# oauth
+security.oauth2.resource.filter-order = 3
+
+# jpa
+spring.jpa.show-sql = true
+logging.level.org.springframework.data=DEBUG
+spring.jpa.hibernate.ddl-auto=
+
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seed?characterEncoding=utf8&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
