1.更换durid配置方式 2.完成oauth2配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,27 +18,40 @@ logging.level.com.xs=DEBUG
 logging.file=spring.log
 
 # druid
-druid.url=jdbc:mysql://127.0.0.1:3306/seed?characterEncoding=utf8&useSSL=true
-druid.driver-class=com.mysql.jdbc.Driver
-druid.username=root
-druid.password=root
-druid.initial-size=1
-druid.min-idle=1
-druid.max-active=20
-druid.test-on-borrow=true
-druid.allow=127.0.0.1
-druid.filters=stat,wall,log4j
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/oauthdemo?characterEncoding=utf8&useSSL=true
+spring.datasource.username=root
+spring.datasource.password=123456
+#最大活跃数
+spring.datasource.maxActive=20
+#初始化数量
+spring.datasource.initialSize=1
+#最大连接等待超时时间
+spring.datasource.maxWait=60000
+#打开PSCache，并且指定每个连接PSCache的大小
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+#通过connectionProperties属性来打开mergeSql功能；慢SQL记录
+#connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+spring.datasource.minIdle=1
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 1 from dual
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+#配置监控统计拦截的filters，去掉后监控界面sql将无法统计,'wall'用于防火墙
+filters: stat, wall, log4j
+# jpa
+spring.jpa.show-sql = true
+logging.level.org.springframework.data=DEBUG
+spring.jpa.hibernate.ddl-auto=update
+
+
+
 
 # oauth
 security.oauth2.resource.filter-order = 3
 
-# jpa
-spring.jpa.show-sql = true
-logging.level.org.springframework.data=DEBUG
-spring.jpa.hibernate.ddl-auto=
 
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seed?characterEncoding=utf8&useSSL=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
