--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/oauthdemo?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 #最大活跃数
 spring.datasource.maxActive=20
 #初始化数量
@@ -42,7 +42,7 @@ spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 #配置监控统计拦截的filters，去掉后监控界面sql将无法统计,'wall'用于防火墙
-filters: stat, wall, log4j
+spring.datasource.filters=stat,wall,log4j
 # jpa
 spring.jpa.show-sql = true
 logging.level.org.springframework.data=DEBUG
