--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         <!--MySQL-->
         <dependency>
             <groupId>mysql</groupId>
