--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/oauthdemo?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 #最大活跃数
 spring.datasource.maxActive=20
 #初始化数量
